examples/test/testpolicy17894.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17894
  namespace: namespace308
spec:
  podSelector:
    matchLabels:
      key28: value18
      key19: value37
      key21: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value2
      podSelector:
        matchLabels:
          key35: value36
